# tree-sitter-marko-js

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  do.sh  example.marko  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-marko.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_marko/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMarko/: marko.h
bindings/swift/TreeSitterMarkoTests/: TreeSitterMarkoTests.swift
examples/: example-five.marko  example-six.marko
queries/: folds.scm  highlights.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: advanced.txt  basics.txt  comments.txt  control_flow.txt  edge_cases.txt  expressions.txt  marko6.txt  scriptlets.txt  shorthand.txt  tag_parameters.txt  top_level.txt
