[package]
name = "tree-sitter-marko"
description = "A parser for marko.js"
version = "0.1.0"
authors = ["rhammock1 <rhamm1027@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "marko"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-marko"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
